--- a/src/output.css
+++ b/src/output.css
@@ -556,53 +556,44 @@ video {
   display: none;
 }
 
-.visible{
-  visibility: visible;
+.my-2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
-.collapse{
-  visibility: collapse;
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.relative{
-  position: relative;
+.flex{
+  display: flex;
 }
 
-.block{
-  display: block;
+.w-full{
+  width: 100%;
 }
 
-.table{
-  display: table;
+.max-w-screen-sm{
+  max-width: 640px;
 }
 
-.contents{
-  display: contents;
+.rounded-full{
+  border-radius: 9999px;
 }
 
-.hidden{
-  display: none;
+.rounded-s-full{
+  border-start-start-radius: 9999px;
+  border-end-start-radius: 9999px;
 }
 
-.border-collapse{
-  border-collapse: collapse;
+.rounded-e-full{
+  border-start-end-radius: 9999px;
+  border-end-end-radius: 9999px;
 }
 
-.transform{
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.resize{
-  resize: both;
-}
-
-.border{
-  border-width: 1px;
-}
-
-.bg-slate-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity, 1));
+.border-none{
+  border-style: none;
 }
 
 .bg-primary{
@@ -610,23 +601,32 @@ video {
   background-color: rgb(254 154 160 / var(--tw-bg-opacity, 1));
 }
 
-.font-popins{
-  font-family: Poppins, sans-serif;
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.bg-slate-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity, 1));
 }
 
-.font-bold{
-  font-weight: 700;
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
-.underline{
-  text-decoration-line: underline;
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
-.outline{
-  outline-style: solid;
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
