--- a/src/input.css
+++ b/src/input.css
@@ -3,3 +3,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  header {
+    @apply sticky top-0 bg-primary;
+  }
+}
