--- a/src/input.css
+++ b/src/input.css
@@ -8,4 +8,7 @@
   header {
     @apply sticky top-0 bg-primary;
   }
+  .card {
+    @apply bg-[#F7F7F8] rounded-2xl p-9 flex flex-col gap-5;
+  }
 }
