--- a/src/output.css
+++ b/src/output.css
@@ -563,6 +563,16 @@ header{
   background-color: rgb(254 154 160 / var(--tw-bg-opacity, 1));
 }
 
+.card{
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+  border-radius: 1rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 247 248 / var(--tw-bg-opacity, 1));
+  padding: 2.25rem;
+}
+
 .sticky{
   position: sticky;
 }
@@ -663,6 +673,10 @@ header{
 
 .gap-1{
   gap: 0.25rem;
+}
+
+.gap-10{
+  gap: 2.5rem;
 }
 
 .gap-2{
@@ -790,6 +804,10 @@ header{
   padding-bottom: 0px;
 }
 
+.pt-12{
+  padding-top: 3rem;
+}
+
 .font-popins{
   font-family: Poppins, sans-serif;
 }
@@ -802,6 +820,11 @@ header{
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-xs{
