--- a/src/input.css
+++ b/src/input.css
@@ -11,4 +11,7 @@
   .card {
     @apply bg-[#F7F7F8] rounded-2xl p-9 flex flex-col gap-5;
   }
+  body {
+    @apply font-popins bg-[#F7F7F7];
+  }
 }
