--- a/src/output.css
+++ b/src/output.css
@@ -573,6 +573,12 @@ header{
   padding: 2.25rem;
 }
 
+body{
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 247 247 / var(--tw-bg-opacity, 1));
+  font-family: Poppins, sans-serif;
+}
+
 .sticky{
   position: sticky;
 }
@@ -597,6 +603,18 @@ header{
 
 .mb-4{
   margin-bottom: 1rem;
+}
+
+.mt-3{
+  margin-top: 0.75rem;
+}
+
+.mt-5{
+  margin-top: 1.25rem;
+}
+
+.mt-6{
+  margin-top: 1.5rem;
 }
 
 .flex{
@@ -732,11 +750,6 @@ header{
   background-color: rgb(239 240 241 / var(--tw-bg-opacity, 1));
 }
 
-.bg-\[\#F7F7F7\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 247 247 / var(--tw-bg-opacity, 1));
-}
-
 .bg-\[\#FFFFFF\]{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
@@ -806,10 +819,6 @@ header{
 
 .pt-12{
   padding-top: 3rem;
-}
-
-.font-popins{
-  font-family: Poppins, sans-serif;
 }
 
 .text-lg{
