--- a/src/output.css
+++ b/src/output.css
@@ -592,6 +592,21 @@ body{
   margin-right: auto;
 }
 
+.my-2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.my-3{
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .my-6{
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
@@ -603,18 +618,6 @@ body{
 
 .mb-4{
   margin-bottom: 1rem;
-}
-
-.mt-3{
-  margin-top: 0.75rem;
-}
-
-.mt-5{
-  margin-top: 1.25rem;
-}
-
-.mt-6{
-  margin-top: 1.5rem;
 }
 
 .flex{
@@ -631,6 +634,10 @@ body{
 
 .h-3{
   height: 0.75rem;
+}
+
+.h-\[50px\]{
+  height: 50px;
 }
 
 .h-full{
@@ -651,6 +658,10 @@ body{
 
 .w-2\/3{
   width: 66.666667%;
+}
+
+.w-\[50px\]{
+  width: 50px;
 }
 
 .w-full{
@@ -689,6 +700,10 @@ body{
   justify-content: center;
 }
 
+.justify-between{
+  justify-content: space-between;
+}
+
 .gap-1{
   gap: 0.25rem;
 }
@@ -701,8 +716,20 @@ body{
   gap: 0.5rem;
 }
 
+.gap-3{
+  gap: 0.75rem;
+}
+
+.gap-4{
+  gap: 1rem;
+}
+
 .gap-6{
   gap: 1.5rem;
+}
+
+.gap-7{
+  gap: 1.75rem;
 }
 
 .overflow-auto{
@@ -715,6 +742,14 @@ body{
 
 .rounded-full{
   border-radius: 9999px;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
+.rounded-xl{
+  border-radius: 0.75rem;
 }
 
 .rounded-e-full{
@@ -745,14 +780,28 @@ body{
   border-color: rgb(241 245 249 / var(--tw-border-opacity, 1));
 }
 
+.border-slate-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(226 232 240 / var(--tw-border-opacity, 1));
+}
+
 .bg-\[\#EFF0F1\]{
   --tw-bg-opacity: 1;
   background-color: rgb(239 240 241 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[\#FFE7E7\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 231 231 / var(--tw-bg-opacity, 1));
+}
+
 .bg-\[\#FFFFFF\]{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#ffff\]{
+  background-color: #ffff;
 }
 
 .bg-primary{
@@ -772,6 +821,18 @@ body{
 
 .p-2{
   padding: 0.5rem;
+}
+
+.p-3{
+  padding: 0.75rem;
+}
+
+.p-4{
+  padding: 1rem;
+}
+
+.p-5{
+  padding: 1.25rem;
 }
 
 .p-8{
@@ -808,9 +869,19 @@ body{
   padding-bottom: 0.5rem;
 }
 
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .py-5{
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .pb-0{
@@ -819,6 +890,15 @@ body{
 
 .pt-12{
   padding-top: 3rem;
+}
+
+.text-center{
+  text-align: center;
+}
+
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-lg{
@@ -849,9 +929,18 @@ body{
   font-weight: 300;
 }
 
+.font-semibold{
+  font-weight: 600;
+}
+
 .text-\[\#4A4A4A\]{
   --tw-text-opacity: 1;
   color: rgb(74 74 74 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#777777\]{
+  --tw-text-opacity: 1;
+  color: rgb(119 119 119 / var(--tw-text-opacity, 1));
 }
 
 .text-primary{
