--- a/src/output.css
+++ b/src/output.css
@@ -595,16 +595,8 @@ body{
   bottom: 0px;
 }
 
-.top-10{
-  top: 2.5rem;
-}
-
 .top-1\/2{
   top: 50%;
-}
-
-.top-1\/3{
-  top: 33.333333%;
 }
 
 .mx-auto{
@@ -644,6 +636,14 @@ body{
   margin-bottom: 1rem;
 }
 
+.mt-2{
+  margin-top: 0.5rem;
+}
+
+.mt-1{
+  margin-top: 0.25rem;
+}
+
 .block{
   display: block;
 }
@@ -654,10 +654,6 @@ body{
 
 .grid{
   display: grid;
-}
-
-.hidden{
-  display: none;
 }
 
 .h-2{
@@ -674,6 +670,22 @@ body{
 
 .h-full{
   height: 100%;
+}
+
+.h-5{
+  height: 1.25rem;
+}
+
+.h-10{
+  height: 2.5rem;
+}
+
+.h-6{
+  height: 1.5rem;
+}
+
+.h-4{
+  height: 1rem;
 }
 
 .min-h-screen{
@@ -700,12 +712,28 @@ body{
   width: 100%;
 }
 
-.max-w-screen-sm{
-  max-width: 640px;
+.w-10{
+  width: 2.5rem;
 }
 
-.cursor-pointer{
-  cursor: pointer;
+.w-6{
+  width: 1.5rem;
+}
+
+.w-4{
+  width: 1rem;
+}
+
+.w-2{
+  width: 0.5rem;
+}
+
+.w-3{
+  width: 0.75rem;
+}
+
+.max-w-screen-sm{
+  max-width: 640px;
 }
 
 .grid-cols-2{
@@ -718,6 +746,10 @@ body{
 
 .flex-col{
   flex-direction: column;
+}
+
+.items-start{
+  align-items: flex-start;
 }
 
 .items-center{
@@ -772,6 +804,10 @@ body{
   gap: 1.75rem;
 }
 
+.self-start{
+  align-self: flex-start;
+}
+
 .overflow-auto{
   overflow: auto;
 }
@@ -790,10 +826,6 @@ body{
 
 .rounded-xl{
   border-radius: 0.75rem;
-}
-
-.rounded{
-  border-radius: 0.25rem;
 }
 
 .rounded-e-full{
@@ -815,10 +847,6 @@ body{
   border-width: 2px;
 }
 
-.border{
-  border-width: 1px;
-}
-
 .border-none{
   border-style: none;
 }
@@ -833,9 +861,9 @@ body{
   border-color: rgb(226 232 240 / var(--tw-border-opacity, 1));
 }
 
-.border-gray-300{
+.border-\[\#F7F7F7\]{
   --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
+  border-color: rgb(247 247 247 / var(--tw-border-opacity, 1));
 }
 
 .bg-\[\#EFF0F1\]{
@@ -877,6 +905,10 @@ body{
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[F7F7F7\]{
+  background-color: F7F7F7;
+}
+
 .fill-\[\#FE9AA0\]{
   fill: #FE9AA0;
 }
@@ -899,6 +931,14 @@ body{
 
 .p-8{
   padding: 2rem;
+}
+
+.p-6{
+  padding: 1.5rem;
+}
+
+.p-0{
+  padding: 0px;
 }
 
 .px-2{
@@ -941,6 +981,11 @@ body{
   padding-bottom: 1.25rem;
 }
 
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .pb-0{
   padding-bottom: 0px;
 }
@@ -978,6 +1023,11 @@ body{
   line-height: 1rem;
 }
 
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -1010,6 +1060,10 @@ body{
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.underline{
+  text-decoration-line: underline;
+}
+
 .opacity-0{
   opacity: 0;
 }
@@ -1023,16 +1077,6 @@ body{
 .hover\:border-slate-300:hover{
   --tw-border-opacity: 1;
   border-color: rgb(203 213 225 / var(--tw-border-opacity, 1));
-}
-
-.hover\:border-blue-500:hover{
-  --tw-border-opacity: 1;
-  border-color: rgb(59 130 246 / var(--tw-border-opacity, 1));
-}
-
-.peer:checked ~ .peer-checked\:border-blue-500{
-  --tw-border-opacity: 1;
-  border-color: rgb(59 130 246 / var(--tw-border-opacity, 1));
 }
 
 .peer:checked ~ .peer-checked\:bg-primary{
