--- a/src/output.css
+++ b/src/output.css
@@ -624,6 +624,11 @@ body{
   margin-bottom: 1.5rem;
 }
 
+.my-8{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
 .mb-10{
   margin-bottom: 2.5rem;
 }
@@ -640,8 +645,32 @@ body{
   margin-top: 0.5rem;
 }
 
-.mt-1{
-  margin-top: 0.25rem;
+.mb-3{
+  margin-bottom: 0.75rem;
+}
+
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+
+.-mt-60{
+  margin-top: -15rem;
+}
+
+.mt-60{
+  margin-top: 15rem;
+}
+
+.mt-20{
+  margin-top: 5rem;
+}
+
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
+.mt-24{
+  margin-top: 6rem;
 }
 
 .block{
@@ -672,22 +701,6 @@ body{
   height: 100%;
 }
 
-.h-5{
-  height: 1.25rem;
-}
-
-.h-10{
-  height: 2.5rem;
-}
-
-.h-6{
-  height: 1.5rem;
-}
-
-.h-4{
-  height: 1rem;
-}
-
 .min-h-screen{
   min-height: 100vh;
 }
@@ -712,24 +725,8 @@ body{
   width: 100%;
 }
 
-.w-10{
-  width: 2.5rem;
-}
-
-.w-6{
-  width: 1.5rem;
-}
-
-.w-4{
-  width: 1rem;
-}
-
-.w-2{
-  width: 0.5rem;
-}
-
-.w-3{
-  width: 0.75rem;
+.w-\[328px\]{
+  width: 328px;
 }
 
 .max-w-screen-sm{
@@ -804,10 +801,6 @@ body{
   gap: 1.75rem;
 }
 
-.self-start{
-  align-self: flex-start;
-}
-
 .overflow-auto{
   overflow: auto;
 }
@@ -861,11 +854,6 @@ body{
   border-color: rgb(226 232 240 / var(--tw-border-opacity, 1));
 }
 
-.border-\[\#F7F7F7\]{
-  --tw-border-opacity: 1;
-  border-color: rgb(247 247 247 / var(--tw-border-opacity, 1));
-}
-
 .bg-\[\#EFF0F1\]{
   --tw-bg-opacity: 1;
   background-color: rgb(239 240 241 / var(--tw-bg-opacity, 1));
@@ -905,12 +893,12 @@ body{
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-\[F7F7F7\]{
-  background-color: F7F7F7;
-}
-
 .fill-\[\#FE9AA0\]{
   fill: #FE9AA0;
+}
+
+.p-0{
+  padding: 0px;
 }
 
 .p-2{
@@ -931,14 +919,6 @@ body{
 
 .p-8{
   padding: 2rem;
-}
-
-.p-6{
-  padding: 1.5rem;
-}
-
-.p-0{
-  padding: 0px;
 }
 
 .px-2{
@@ -981,17 +961,16 @@ body{
   padding-bottom: 1.25rem;
 }
 
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
 .pb-0{
   padding-bottom: 0px;
 }
 
 .pt-12{
   padding-top: 3rem;
+}
+
+.pb-3{
+  padding-bottom: 0.75rem;
 }
 
 .text-center{
@@ -1001,6 +980,11 @@ body{
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-lg{
@@ -1021,11 +1005,6 @@ body{
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 
 .font-bold{
@@ -1058,6 +1037,11 @@ body{
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#ACACAC\]{
+  --tw-text-opacity: 1;
+  color: rgb(172 172 172 / var(--tw-text-opacity, 1));
 }
 
 .underline{
