feat : payment success page

--- a/src/output.css
+++ b/src/output.css
@@ -633,6 +633,10 @@ body{
   margin-bottom: 2.5rem;
 }
 
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
 .mb-28{
   margin-bottom: 7rem;
 }
@@ -645,32 +649,8 @@ body{
   margin-top: 0.5rem;
 }
 
-.mb-3{
-  margin-bottom: 0.75rem;
-}
-
-.mb-5{
-  margin-bottom: 1.25rem;
-}
-
-.-mt-60{
-  margin-top: -15rem;
-}
-
-.mt-60{
-  margin-top: 15rem;
-}
-
 .mt-20{
   margin-top: 5rem;
-}
-
-.mb-2{
-  margin-bottom: 0.5rem;
-}
-
-.mt-24{
-  margin-top: 6rem;
 }
 
 .block{
@@ -701,6 +681,14 @@ body{
   height: 100%;
 }
 
+.h-20{
+  height: 5rem;
+}
+
+.h-10{
+  height: 2.5rem;
+}
+
 .min-h-screen{
   min-height: 100vh;
 }
@@ -723,10 +711,6 @@ body{
 
 .w-full{
   width: 100%;
-}
-
-.w-\[328px\]{
-  width: 328px;
 }
 
 .max-w-screen-sm{
@@ -769,6 +753,10 @@ body{
   justify-content: space-between;
 }
 
+.justify-around{
+  justify-content: space-around;
+}
+
 .gap-1{
   gap: 0.25rem;
 }
@@ -799,6 +787,14 @@ body{
 
 .gap-7{
   gap: 1.75rem;
+}
+
+.gap-14{
+  gap: 3.5rem;
+}
+
+.gap-8{
+  gap: 2rem;
 }
 
 .overflow-auto{
@@ -864,6 +860,11 @@ body{
   background-color: rgb(247 247 247 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[\#FE9AA0\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 154 160 / var(--tw-bg-opacity, 1));
+}
+
 .bg-\[\#FFE7E7\]{
   --tw-bg-opacity: 1;
   background-color: rgb(255 231 231 / var(--tw-bg-opacity, 1));
@@ -921,6 +922,10 @@ body{
   padding: 2rem;
 }
 
+.p-20{
+  padding: 5rem;
+}
+
 .px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -969,10 +974,6 @@ body{
   padding-top: 3rem;
 }
 
-.pb-3{
-  padding-bottom: 0.75rem;
-}
-
 .text-center{
   text-align: center;
 }
@@ -1007,6 +1008,11 @@ body{
   line-height: 1rem;
 }
 
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -1029,6 +1035,11 @@ body{
   color: rgb(119 119 119 / var(--tw-text-opacity, 1));
 }
 
+.text-\[\#ACACAC\]{
+  --tw-text-opacity: 1;
+  color: rgb(172 172 172 / var(--tw-text-opacity, 1));
+}
+
 .text-primary{
   --tw-text-opacity: 1;
   color: rgb(254 154 160 / var(--tw-text-opacity, 1));
@@ -1039,9 +1050,14 @@ body{
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-\[\#ACACAC\]{
+.text-indigo-500{
   --tw-text-opacity: 1;
-  color: rgb(172 172 172 / var(--tw-text-opacity, 1));
+  color: rgb(99 102 241 / var(--tw-text-opacity, 1));
+}
+
+.text-indigo-600{
+  --tw-text-opacity: 1;
+  color: rgb(79 70 229 / var(--tw-text-opacity, 1));
 }
 
 .underline{
