--- a/src/output.css
+++ b/src/output.css
@@ -579,6 +579,10 @@ body{
   font-family: Poppins, sans-serif;
 }
 
+.fixed{
+  position: fixed;
+}
+
 .absolute{
   position: absolute;
 }
@@ -597,6 +601,10 @@ body{
 
 .top-1\/2{
   top: 50%;
+}
+
+.left-1\/2{
+  left: 50%;
 }
 
 .mx-auto{
@@ -665,6 +673,10 @@ body{
   display: grid;
 }
 
+.h-10{
+  height: 2.5rem;
+}
+
 .h-2{
   height: 0.5rem;
 }
@@ -679,14 +691,6 @@ body{
 
 .h-full{
   height: 100%;
-}
-
-.h-20{
-  height: 5rem;
-}
-
-.h-10{
-  height: 2.5rem;
 }
 
 .min-h-screen{
@@ -765,6 +769,14 @@ body{
   gap: 2.5rem;
 }
 
+.gap-12{
+  gap: 3rem;
+}
+
+.gap-14{
+  gap: 3.5rem;
+}
+
 .gap-2{
   gap: 0.5rem;
 }
@@ -789,12 +801,16 @@ body{
   gap: 1.75rem;
 }
 
-.gap-14{
-  gap: 3.5rem;
-}
-
 .gap-8{
   gap: 2rem;
+}
+
+.gap-11{
+  gap: 2.75rem;
+}
+
+.gap-9{
+  gap: 2.25rem;
 }
 
 .overflow-auto{
@@ -906,6 +922,10 @@ body{
   padding: 0.5rem;
 }
 
+.p-20{
+  padding: 5rem;
+}
+
 .p-3{
   padding: 0.75rem;
 }
@@ -920,10 +940,6 @@ body{
 
 .p-8{
   padding: 2rem;
-}
-
-.p-20{
-  padding: 5rem;
 }
 
 .px-2{
@@ -1008,11 +1024,6 @@ body{
   line-height: 1rem;
 }
 
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
 .font-bold{
   font-weight: 700;
 }
@@ -1023,6 +1034,11 @@ body{
 
 .font-semibold{
   font-weight: 600;
+}
+
+.text-\[\#404040\]{
+  --tw-text-opacity: 1;
+  color: rgb(64 64 64 / var(--tw-text-opacity, 1));
 }
 
 .text-\[\#4A4A4A\]{
@@ -1048,16 +1064,6 @@ body{
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-indigo-500{
-  --tw-text-opacity: 1;
-  color: rgb(99 102 241 / var(--tw-text-opacity, 1));
-}
-
-.text-indigo-600{
-  --tw-text-opacity: 1;
-  color: rgb(79 70 229 / var(--tw-text-opacity, 1));
 }
 
 .underline{
