--- a/src/output.css
+++ b/src/output.css
@@ -579,10 +579,6 @@ body{
   font-family: Poppins, sans-serif;
 }
 
-.fixed{
-  position: fixed;
-}
-
 .absolute{
   position: absolute;
 }
@@ -601,6 +597,10 @@ body{
 
 .top-1\/2{
   top: 50%;
+}
+
+.z-10{
+  z-index: 10;
 }
 
 .mx-auto{
@@ -631,11 +631,6 @@ body{
 .my-8{
   margin-top: 2rem;
   margin-bottom: 2rem;
-}
-
-.my-32{
-  margin-top: 8rem;
-  margin-bottom: 8rem;
 }
 
 .mb-10{
@@ -712,10 +707,6 @@ body{
 
 .w-\[50px\]{
   width: 50px;
-}
-
-.w-\[576px\]{
-  width: 576px;
 }
 
 .w-full{
@@ -806,14 +797,6 @@ body{
   gap: 2rem;
 }
 
-.gap-12{
-  gap: 3rem;
-}
-
-.gap-28{
-  gap: 7rem;
-}
-
 .overflow-auto{
   overflow: auto;
 }
@@ -847,16 +830,6 @@ body{
 .rounded-t-\[50px\]{
   border-top-left-radius: 50px;
   border-top-right-radius: 50px;
-}
-
-.rounded-t-2xl{
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-}
-
-.rounded-t-3xl{
-  border-top-left-radius: 1.5rem;
-  border-top-right-radius: 1.5rem;
 }
 
 .border-2{
@@ -968,6 +941,11 @@ body{
   padding-right: 1rem;
 }
 
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 .px-8{
   padding-left: 2rem;
   padding-right: 2rem;
@@ -976,6 +954,11 @@ body{
 .py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .py-2{
@@ -998,34 +981,21 @@ body{
   padding-bottom: 1.25rem;
 }
 
-.py-16{
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
-.py-28{
-  padding-top: 7rem;
-  padding-bottom: 7rem;
+.py-12{
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 .pb-0{
   padding-bottom: 0px;
 }
 
+.pb-5{
+  padding-bottom: 1.25rem;
+}
+
 .pt-12{
   padding-top: 3rem;
-}
-
-.pb-24{
-  padding-bottom: 6rem;
-}
-
-.pt-8{
-  padding-top: 2rem;
-}
-
-.pb-20{
-  padding-bottom: 5rem;
 }
 
 .text-center{
@@ -1115,12 +1085,6 @@ body{
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-2xl{
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
