--- a/src/output.css
+++ b/src/output.css
@@ -653,6 +653,18 @@ body{
   margin-top: 5rem;
 }
 
+.mb-14{
+  margin-bottom: 3.5rem;
+}
+
+.mb-12{
+  margin-bottom: 3rem;
+}
+
+.mb-11{
+  margin-bottom: 2.75rem;
+}
+
 .box-border{
   box-sizing: border-box;
 }
@@ -795,6 +807,10 @@ body{
 
 .gap-8{
   gap: 2rem;
+}
+
+.gap-9{
+  gap: 2.25rem;
 }
 
 .overflow-auto{
