--- a/src/output.css
+++ b/src/output.css
@@ -636,6 +636,11 @@ body{
   margin-bottom: 1rem;
 }
 
+.my-5{
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
 .my-6{
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
@@ -680,6 +685,10 @@ body{
 
 .mt-3{
   margin-top: 0.75rem;
+}
+
+.mb-7{
+  margin-bottom: 1.75rem;
 }
 
 .box-border{
